[package]
name = "roomservice-rust"
edition = "2018"

version = "0.1.0"
authors = ["curtiswilkinson <curtistatewilkinson@gmail.com>"]

[dependencies]
checksums = "0.5"
clap = "2.32.0"
colored = "1.6.1"
futures-preview = { version = "=0.3.0-alpha.18" }
glob = "0.2.11"
globwalk = "0.5.0"
ignore = "0.4.7"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.7"
subprocess = "0.1.17"
