[package]
name = "roomservice"
edition = "2018"
version = "0.1.0"
authors = ["curtiswilkinson <curtistatewilkinson@gmail.com>"]

[dependencies]
clap = "2.32.0"
colored = "1.6.1"
rayon = "1.0.0"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_yaml = "0.8.7"
subprocess = "0.1.17"
ignore = "0.4.16"
meowhash = "0.3.0"

[profile.release]
opt-level = 3
