[package]
name = "roomservice"
version = "0.1.0"
authors = ["curtiswilkinson <curtistatewilkinson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
colored = "2.0.0"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_yaml = "0.8.13"
meowhash = "0.3.0"
digest = "0.9"
ignore = "0.4.16"
rayon = "1.4.0"
subprocess = "0.2.5"
